Avoid overlapping boxes problem

--- a/dayze/assets/css/style.css
+++ b/dayze/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 background-attachment: fixed;
 background-color: #EEE;
 background-image: url(http://cdn.aquarionics.com/wp-content/uploads/2012/01/londonkrt13.jpg);
-background-position: 50% 0%;
+background-position: 50% 50%;
 background-repeat: no-repeat;
 }
 
